--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Моє Резюме</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Моє Резюме</title>
 </head>
+
 <body>
-<p><h1>Резюме</h1></p>
-<p><h3>Мельник Роман Володимирович<h2></p>
-<p>Народився 3 квітня 1990 року в місті Рівне.</p>
-<p>Закінчив рівненську 12 загальньосвітню школу.</p>
-<p>В 2007 році розпочав навчання в Національному університеті водного господарства та природокористування на спеціальність Прикладна математика</p>
+	<h1>Резюме</h1>
+	<h2>Мельник Роман Володимирович</h2>
+	<p>Народився 3 квітня 1990 року в місті Рівне.</p>
+	<p>Закінчив рівненську 12 загальньосвітню школу.</p>
+	<p>В 2007 році розпочав навчання в Національному університеті водного господарства та природокористування на
+		спеціальність Прикладна математика</p>
 	<p>Місця роботи</p>
-	<ul  type="circle" >
-	<li>2006-2007р. таємний покупець в мережі магазинів "Фокстрорт"</li>
-	<li>2007р. ведучий шоу програм в кафе "Торнадо"</li>
-	<li>2007р-2012р. майстер по сценічному освітленню в нічному клубі "Лагуна"</li>
-	<li>2012-2016р. монтаж систем автоматики на виробництві</li>
-	<li>2017-... помічник депутата</li>
+	<ul type="circle">
+		<li>2006-2007р. таємний покупець в мережі магазинів "Фокстрорт"</li>
+		<li>2007р. ведучий шоу програм в кафе "Торнадо"</li>
+		<li>2007р-2012р. майстер по сценічному освітленню в нічному клубі "Лагуна"</li>
+		<li>2012-2016р. монтаж систем автоматики на виробництві</li>
+		<li>2017-... помічник депутата</li>
 	</ul>
-<p>Маю водійські права категорії В</p>
-<p>Знання мов: українська, російська, англійська </p>
-<p></p>
-
-
-
+	<p>Маю водійські права категорії В</p>
+	<p>Знання мов: українська, російська, англійська </p>
 </body>
+
 </html>
