Add PHP to HTML page
Додав тег PHP в існуючу сторінку

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 	</ul>
 <p>Маю водійські права категорії В</p>
 <p>Знання мов: українська, російська, англійська </p>
-<p></p>
 
+<?php
+
+
+?>
 
 
 </body>
